fix: 修复collapse样式

--- a/scss/components/_collapse.scss
+++ b/scss/components/_collapse.scss
@@ -9,6 +9,7 @@
     color: var(--text--loud-color);
     padding: var(--Collapse-header-padding);
     margin: 0;
+    border-bottom: var(--borderWidth) solid var(--Collapse-border-color);
     cursor: pointer;
     background: var(--Collapse-header-bg);
 
