--- a/scss/themes/_cxd-variables.scss
+++ b/scss/themes/_cxd-variables.scss
@@ -230,7 +230,7 @@ $R8: 50%;
   --ColorPicker-onDisabled-color: #999;
 
   --Collapse-border: #{px2rem(1px)} solid #EBEDF5;
-  --Collapse-border-color: #{$G8};
+  --Collapse-border-color: #EBEDF5;
   --Collapse-header-fontSize: #{$T3};
   --Collapse-header-fontWeight: #{$W3};
   --Collapse-header-padding: #{px2rem(14px)};
